movie picker link added

--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
                                         <p class="section-subtitle text-muted">In collaboration with friends</p>
                                     </header>
                                     <div class="portfolio-modal-image column-mt">
-                                        <a href="http://project-dunn.herokuapp.com" target="_blank"><img src="images/portfolio-image-creative-1.jpg" alt="Portfolio image"></a>
+                                        <a href="http://quixoticball-moviepicker.herokuapp.com" target="_blank"><img src="images/portfolio-image-creative-1.jpg" alt="Portfolio image"></a>
                                     </div>
                                 </div><!-- /Portfolio image modal -->
                             </div>
