--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 
                                 <!-- Portfolio image -->
                                 <a href="#portfolio-image-1" class="portfolio-item photography">
-                                    <img src="images/portfolio-image-photo-1-thumb.jpg">
+                                    <img src="images/videoportal.png">
                                     <div class="portfolio-overlay">
                                         <div class="portfolio-text">
                                             <h3>Video Portal</h3>
@@ -221,14 +221,14 @@
                                         <p class="section-subtitle text-muted">On the job</p>
                                     </header>
                                     <div class="portfolio-modal-image column-mt">
-                                        <a href="http://www.tptherapy.com/watch" target="_blank"><img src="images/portfolio-image-photo-1.jpg" alt="Portfolio image"></a>
+                                        <a href="http://www.tptherapy.com/watch" target="_blank"><img src="images/videoportal-thumb.png" alt="Portfolio image"></a>
                                     </div>
                                 </div><!-- /Portfolio image modal -->
 
 
                                 <!-- Portfolio image -->
                                 <a href="#portfolio-image-2" class="portfolio-item web-design">
-                                    <img src="images/portfolio-image-web-1-thumb.jpg">
+                                    <img src="images/nytimes-thumb.png">
                                     <div class="portfolio-overlay">
                                         <div class="portfolio-text">
                                             <h3>Scrape New York Times for news project</h3>
@@ -244,7 +244,7 @@
                                         <p class="section-subtitle text-muted">During Coding Bootcamp</p>
                                     </header>
                                     <div class="portfolio-modal-image column-mt">
-                                        <a href="http://afternoon-crag-39129.herokuapp.com" target="_blank"><img src="images/portfolio-image-web-1.jpg" alt="Portfolio image"></a>
+                                        <a href="http://afternoon-crag-39129.herokuapp.com" target="_blank"><img src="images/nytimes.png" alt="Portfolio image"></a>
                                         <!--NYT-MERN application link http://afternoon-crag-39129.herokuapp.com/-->
                                     </div>
                                 </div><!-- /Portfolio image modal -->
@@ -252,7 +252,7 @@
 
                                 <!-- Portfolio image -->
                                 <a href="#portfolio-image-3" class="portfolio-item photography">
-                                    <img src="images/portfolio-image-photo-2-thumb.jpg">
+                                    <img src="images/sofcomfort-thumb.png">
                                     <div class="portfolio-overlay">
                                         <div class="portfolio-text">
                                             <h3>Sofcomfort products site</h3>
@@ -268,14 +268,14 @@
                                         <p class="section-subtitle text-muted">On the job</p>
                                     </header>
                                     <div class="portfolio-modal-image column-mt">
-                                        <a href="http://www.sofcomfort.com" target="_blank"><img src="images/portfolio-image-photo-2.jpg" alt="Portfolio image"></a>
+                                        <a href="http://www.sofcomfort.com" target="_blank"><img src="images/sofcomfort.png" alt="Portfolio image"></a>
                                     </div>
                                 </div><!-- /Portfolio image modal -->
 
 
                                 <!-- Portfolio image -->
                                 <a href="#portfolio-image-4" class="portfolio-item creative">
-                                    <img src="images/portfolio-image-creative-1-thumb.jpg">
+                                    <img src="images/projectdunn-thumb.png">
                                     <div class="portfolio-overlay">
                                         <div class="portfolio-text">
                                             <h3>Project-Dunn</h3>
@@ -291,13 +291,13 @@
                                         <p class="section-subtitle text-muted">In collaboration with friends</p>
                                     </header>
                                     <div class="portfolio-modal-image column-mt">
-                                        <a href="http://project-dunn.herokuapp.com" target="_blank"><img src="images/portfolio-image-creative-1.jpg" alt="Portfolio image"></a>
+                                        <a href="http://project-dunn.herokuapp.com" target="_blank"><img src="images/projectdunn.png" alt="Portfolio image"></a>
                                     </div>
                                 </div><!-- /Portfolio image modal -->
 
                                 <!-- Portfolio image -->
                                 <a href="#portfolio-image-5" class="portfolio-item creative">
-                                    <img src="images/portfolio-image-creative-1-thumb.jpg">
+                                    <img src="images/portfolio-image-web-1-thumb.jpg">
                                     <div class="portfolio-overlay">
                                         <div class="portfolio-text">
                                             <h3>BubbleBust - News Hub</h3>
@@ -312,13 +312,13 @@
                                         <p class="section-subtitle text-muted">In collaboration with friends</p>
                                     </header>
                                     <div class="portfolio-modal-image column-mt">
-                                        <a href="http://project-dunn.herokuapp.com" target="_blank"><img src="images/portfolio-image-creative-1.jpg" alt="Portfolio image"></a>
+                                        <a href="https://github.com/contygm/BubbleBust" target="_blank"><img src="images/portfolio-image-web-1.jpg" alt="Portfolio image"></a>
                                     </div>
                                 </div><!-- /Portfolio image modal -->
 
                                 <!-- Portfolio image -->
                                 <a href="#portfolio-image-6" class="portfolio-item creative">
-                                    <img src="images/portfolio-image-creative-1-thumb.jpg">
+                                    <img src="images/moviepicker-thumb.png">
                                     <div class="portfolio-overlay">
                                         <div class="portfolio-text">
                                             <h3>Movie Picker</h3>
@@ -333,7 +333,7 @@
                                         <p class="section-subtitle text-muted">In collaboration with friends</p>
                                     </header>
                                     <div class="portfolio-modal-image column-mt">
-                                        <a href="http://quixoticball-moviepicker.herokuapp.com" target="_blank"><img src="images/portfolio-image-creative-1.jpg" alt="Portfolio image"></a>
+                                        <a href="http://quixoticball-moviepicker.herokuapp.com" target="_blank"><img src="images/moviepicker.png" alt="Portfolio image"></a>
                                     </div>
                                 </div><!-- /Portfolio image modal -->
 
