portfolio for demo day

--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                                         <p class="section-subtitle text-muted">In collaboration with friends</p>
                                     </header>
                                     <div class="portfolio-modal-image column-mt">
-                                        <a href="https://github.com/contygm/BubbleBust" target="_blank"><img src="images/portfolio-image-web-1.jpg" alt="Portfolio image"></a>
+                                        <a href="http://github.com/contygm/BubbleBust" target="_blank"><img src="images/portfolio-image-web-1.jpg" alt="Portfolio image"></a>
                                     </div>
                                 </div><!-- /Portfolio image modal -->
 
