changes to about contact pages images resized

--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
                         <div class="col-md-12 column-pv">
                             <h3>Tatiana Grigorieva</h3>
                             <img class="auth-image" src="images/img-about-1.jpg">
-                            <p class="text-muted">Currently a software developer with Cotton, Inc., Tatiana Grigorieva was born and raised in Russia where she graduated from Smolensk Economic College with a degree in Accounting. Her career began with the Center of Statistics as a computer operator where her interest and knowledge of computer programming began.</p>
-                            <p class="text-muted">After moving to United States she worked as analyst for West Corp. where she learn the skills of application programming. Later over the years of different employments and volunteer work she was introduced to web development.</p>    
-                            <p class="text-muted">Tatiana has been in her current position since March 2015. She is working on maintenance and updates for  a suite of software programs and services that leverage USDA High Volume Instrument (HVI) data. She is working on building new features to add to the system which provides significantly improved cotton inventory management and analysis capabilities, as well as electronic communication between producers, ginners, mills, and merchants/co-ops.</p> 
+                            <p class="text-muted">Currently a software developer with Cotton, Inc., I was born and raised in Russia where I graduated from Smolensk Economic College with a degree in Accounting. My career began with the Center of Statistics as a computer operator where my interest and knowledge of computer programming began.</p>
+                            <p class="text-muted">After moving to United States I worked as analyst for West Corp. where I learned the skills of application programming. Later over the years of different employments and volunteer work I was introduced to web development.</p>    
+                            <p class="text-muted">In my current position since March 2015. I'm working on maintenance and updates for  a suite of software programs and services that leverage USDA High Volume Instrument (HVI) data, on building new features to add to the system which provides significantly improved cotton inventory management and analysis capabilities, as well as electronic communication between producers, ginners, mills, and merchants/co-ops.</p> 
                             <!--<a href="#">Read more <i class="fa fa-angle-double-right"></i></a>-->
 
                         </div><!-- /Information block -->
@@ -114,7 +114,7 @@
     </section><!-- END OF SECTION: About -->
 
 
-    <!-- SECTION: Features -->
+    <!-- SECTION: Technologies -->
     <section id="features" class="section">
         <div class="container">
 
@@ -162,7 +162,7 @@
             </div><!-- /Section content -->
 
         </div>
-    </section><!-- END OF SECTION: Features -->
+    </section><!-- END OF SECTION: Technologies -->
 
 
     <!-- SECTION: Portfolio -->
@@ -369,28 +369,6 @@
                 <!-- Left column -->
                 <div class="col-md-8 column-pv">
 
-                    <!-- Form -->
-                    <form class="form-ajax">
-                        <input type="hidden" name="form" value="Contact">
-                        <div class="row">
-                            <div class="form-group col-md-6 underline">
-                                <input type="text" name="name" class="form-control" placeholder="Your Name... *" required>
-                            </div>
-                            <div class="form-group col-md-6 underline">
-                                <input type="email" name="email" class="form-control" placeholder="E-mail address... *" required>
-                            </div>
-                        </div>
-                        <div class="row column-mt">
-                            <div class="form-group col-md-12 underline">
-                                <textarea name="message" class="form-control" placeholder="Message... "></textarea>
-                            </div>
-                        </div>
-                        <div class="row column-mt">
-                            <div class="form-group col-md-12">
-                                <button type="submit" class="btn btn-colored">Send Message</button>
-                            </div>
-                        </div>
-                    </form><!-- /Form -->
 
                 </div><!-- /Left column -->
 
@@ -441,7 +419,7 @@
 <!-- END OF FOOTER -->
 
 
-<!-- MODAL: Get Free Trial -->
+<!-- MODAL:  -->
 <div class="modal fade" id="getfreetrial" role="dialog">
     <div class="modal-dialog">
         <div class="modal-content">
@@ -451,57 +429,11 @@
                 <div class="modal-title">Contact Us</div>
             </div>
 
-            <div class="modal-body">
-                <form method="post" class="form-ajax">
-
-                    <input type="hidden" name="form" value="Get In Touch">
-
-                    <div class="row">
-                        <span class="form-contact-success-message"></span>
-                    </div>
-
-                    <div class="row-fields row">
-
-                        <div class="form-group col-field col-sm-12 underline">
-                            <input type="text" name="name" class="form-control" placeholder="Your Name... *" required>
-                        </div>
-
-                        <div class="form-group col-field col-sm-12 underline">
-                            <input type="email" name="email" class="form-control" placeholder="E-mail address... *" required>
-                        </div>
-
-                        <div class="form-group col-field col-sm-12 underline">
-                            <textarea name="message" class="form-control" placeholder="Message... "></textarea>
-                        </div>
-
-                        <div class="form-group col-field col-sm-12">
-                            <button type="submit" class="btn btn-colored">Send Message</button>
-                        </div>
-
-                    </div>
-                </form>
-            </div>
         </div>
     </div>
 </div>
-<!-- END OF MODAL: Get Free Trial -->
+<!-- END OF MODAL:  -->
 
-
-<!-- MODAL: Result Message -->
-<div class="modal fade" id="result" role="dialog">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <div class="modal-title">Send Message</div>
-            </div>
-            <div class="modal-body">
-                <p class="modal-result"></p>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- END OF MODAL: Result Message -->
 
 
 <!-- SCRIPTS -->
