--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             <div class="row section-content">
 
                 <!-- Left column -->
-                    <div class="col-md-8">
+                    <div class="col-xs-12 col-md-8">
                         <div class="row">
 
                                 <!-- column 1 -->
@@ -343,7 +343,7 @@
                         </div>  
                     </div>     
                     <!-- Right column -->
-                    <div class="col-md-4 column-pv">
+                    <div class="col-xs-0 col-md-4 column-pv">
                         <p class="text-big text-muted text-90deg">technologies</p>
                     </div><!-- /Right column -->
             </div><!-- /Section content -->
@@ -392,7 +392,7 @@
 
                                 <!-- Portfolio image -->
                                 <a href="#portfolio-image-1" class="portfolio-item photography">
-                                    <img src="images/videoportal.png">
+                                    <img src="images/videoportal-thumb.png">
                                     <div class="portfolio-overlay">
                                         <div class="portfolio-text">
                                             <h3>Video Portal</h3>
@@ -408,7 +408,7 @@
                                         <p class="section-subtitle text-muted">On the job</p>
                                     </header>
                                     <div class="portfolio-modal-image column-mt">
-                                        <a href="http://www.tptherapy.com/watch" target="_blank"><img src="images/videoportal-thumb.png" alt="Portfolio image"></a>
+                                        <a href="http://www.tptherapy.com/watch" target="_blank"><img src="images/videoportal.png" alt="Portfolio image"></a>
                                     </div>
                                 </div><!-- /Portfolio image modal -->
 
@@ -417,8 +417,11 @@
                                 <a href="#portfolio-image-2" class="portfolio-item web-design">
                                     <img src="images/nytimes-thumb.png">
                                     <div class="portfolio-overlay">
+                                        <div class="portfolio-text-about">
+                                            <p><span class="text-about">Technologies Used:</span> MongoDB Express React Node (MERN) </p>                                        
+                                        </div>                                    
                                         <div class="portfolio-text">
-                                            <h3>Scrape New York Times for news project</h3>
+                                            <h3>Scrape New York Times for news</h3>
                                             <span class="portfolio-category text-muted">@ During Coding Bootcamp</span>
                                         </div>
                                     </div>
@@ -427,7 +430,7 @@
                                 <!-- Portfolio image modal -->
                                 <div id="portfolio-image-2" class="portfolio-modal mfp-hide">
                                     <header class="header header-left">
-                                        <h3 class="section-title">Scrape New York Times for news project</h3>
+                                        <h3 class="section-title">Scrape New York Times for news</h3>
                                         <p class="section-subtitle text-muted">During Coding Bootcamp</p>
                                     </header>
                                     <div class="portfolio-modal-image column-mt">
@@ -464,6 +467,10 @@
                                 <a href="#portfolio-image-4" class="portfolio-item creative">
                                     <img src="images/projectdunn-thumb.png">
                                     <div class="portfolio-overlay">
+                                        <div class="portfolio-text-about">
+                                            <p>The application to change sitting position of the students in the class and to keep track of their grades.   </p>
+                                            <p><span class="text-about">Technologies Used:</span> HTML CSS JavaScript Materialize NodeJS MySQL Sequelize </p>                                        
+                                        </div>                                    
                                         <div class="portfolio-text">
                                             <h3>Project-Dunn</h3>
                                             <span class="portfolio-category text-muted">@ In collaboration with friends</span>
@@ -486,7 +493,11 @@
                                 <a href="#portfolio-image-5" class="portfolio-item creative">
                                     <img src="images/bubblebust-thumb.png">
                                     <div class="portfolio-overlay">
-                                        <div class="portfolio-text">
+                                        <div class="portfolio-text-about">
+                                            <p>An information hub with access to official government twitter feeds and news sources. </p>
+                                            <p><span class="text-about">Technologies Used:</span> HTML CSS JavaScript NodeJS Boostrap React Multiple APIs Mongoose MongoDB </p>                                        
+                                        </div>
+                                        <div class="portfolio-text">                                        
                                             <h3>BubbleBust - News Hub</h3>
                                             <span class="portfolio-category text-muted">@ In collaboration with friends</span>
                                         </div>
@@ -507,6 +518,10 @@
                                 <a href="#portfolio-image-6" class="portfolio-item creative">
                                     <img src="images/moviepicker-thumb.png">
                                     <div class="portfolio-overlay">
+                                        <div class="portfolio-text-about">
+                                            <p>The application will make a recommendation on the movie with the higher score. </p>
+                                            <p><span class="text-about">Technologies Used:</span> HTML CSS JavaScript Skeleton API (OMDB, imdb JSON) </p>                                        
+                                        </div>                                    
                                         <div class="portfolio-text">
                                             <h3>Movie Picker</h3>
                                             <span class="portfolio-category text-muted">@ In collaboration with friends</span>
