links removed image updated

--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
                                         <p class="section-subtitle text-muted">In collaboration with friends</p>
                                     </header>
                                     <div class="portfolio-modal-image column-mt">
-                                        <a href="http://project-dunn.herokuapp.com/students" target="_blank"><img src="images/projectdunn.png" alt="Portfolio image"></a>
+                                        <a href="" target="_blank"><img src="images/projectdunn.png" alt="Portfolio image"></a>
                                     </div>
                                 </div><!-- /Portfolio image modal -->
 
@@ -535,7 +535,7 @@
                                         <p class="section-subtitle text-muted">In collaboration with friends</p>
                                     </header>
                                     <div class="portfolio-modal-image column-mt">
-                                        <a href="http://quixoticball-moviepicker.herokuapp.com" target="_blank"><img src="images/moviepicker.png" alt="Portfolio image"></a>
+                                        <a href="" target="_blank"><img src="images/moviepicker.png" alt="Portfolio image"></a>
                                     </div>
                                 </div><!-- /Portfolio image modal -->
 
